--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
   <h1>Test Page</h1>
 
+<a href="sample.php">sample</a>
+
 <script type="text/javascript">
 function base64UrlToUint8Array(base64UrlData) {
   const padding = '='.repeat((4 - base64UrlData.length % 4) % 4);
