--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <button onclick="subscribe()">Subscribe</button>
+    <button onclick="notify()">Notify Me!</button>
 
     <script>
 
@@ -26,5 +27,7 @@
         console.log(JSON.stringify(push))
       }
     </script>
+
+    <script src="./push.js"></script>
 </body>
 </html>
