--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <button onclick="notify()">Notify Me!</button>
 
     <script>
-
+      var code = ''
       addEventListener("load", async()=>{
         let sw = await navigator.serviceWorker.register('./sw.js')
         console.log(sw)
@@ -24,10 +24,18 @@
               'BAwt0Q-xmEsMJmiUogjK0-8jifPsB2NAR_5eSATzHLd3LYA6Jm_diDN643cigQQl-_kkApym-Mb5815qf2EUN5w'
         })
 
+        code = JSON.stringify(push)
         console.log(JSON.stringify(push))
       }
     </script>
 
     <script src="./push.js"></script>
+    
+    <script>
+      function notify(){
+          console.log(sub)
+          webpush.sendNotification(sub, "Test Message");
+      }
+    </script>
 </body>
 </html>
