--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       }
     </script>
 
-    <script src="./push.js"></script>
+    <script src="push.js"></script>
     
     <script>
       function notify(){
