--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         console.log(JSON.stringify(push))
       }
     </script>
-
-    <script src="push.js"></script>
     
+    <!-- <script src="node_modules/web-push/src/index.js"></script> -->
+
     <script>
       function notify(){
           console.log(sub)
